--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "apiz-node-client",
   "version": "1.0.0",
   "description": "Node client for apiz",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "types": "types/index.d.ts",
   "typings": "types/index.d.ts",
   "scripts": {
-    "lint": "eslint src",
-    "format": "prettier --config .prettierrc.js --write src/**/*.js test/**/*.js",
-    "inspect": "jsinspect src"
+    "build": "tsc",
+    "prebuild": "rimraf dist types",
+    "lint": "tslint -p tsconfig.json",
+    "format": "prettier --config .prettierrc.js --write src/**/*.{js,ts}",
+    "inspect": "jsinspect src",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -31,25 +34,38 @@
     "types"
   ],
   "lint-staged": {
-    "*.js": [
-      "eslint"
+    "linters": {
+      "*.js": [
+        "eslint"
+      ],
+      "*.ts": [
+        "tslint"
+      ]
+    },
+    "ignore": [
+      "**/*.d.ts"
     ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm run build && git add ."
     }
   },
   "homepage": "https://github.com/ta7sudan/apiz-node-client#readme",
   "devDependencies": {
-    "eslint": "^5.7.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.1.2",
+    "apiz-ng": "^1.1.3",
+    "eslint": "^5.15.3",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "jsinspect": "^0.12.7",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3"
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "tslint": "^5.14.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "got": "^9.2.2"
+    "@types/got": "^9.4.1",
+    "got": "^9.6.0"
   }
 }
