--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "tslint -p tsconfig.json",
     "format": "prettier --config .prettierrc.js --write src/**/*.{js,ts}",
     "inspect": "jsinspect src",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "repository": {
     "type": "git",
@@ -53,7 +54,9 @@
   },
   "homepage": "https://github.com/ta7sudan/apiz-node-client#readme",
   "devDependencies": {
-    "apiz-ng": "^1.1.3",
+    "apiz-ng": "^3.0.1",
+    "conventional-changelog-cli": "^2.0.12",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.15.3",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
@@ -67,5 +70,10 @@
   "dependencies": {
     "@types/got": "^9.4.1",
     "got": "^9.6.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
